--- a/Finger-Print-WebApi/Finger-Print-WebApi/appsettings.json
+++ b/Finger-Print-WebApi/Finger-Print-WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FingerPrint": "server=.;database=FingerPrint;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+  }
 }
