--- a/Finger-Print-WebApi/Finger-Print-WebApi/Finger-Print-WebApi.csproj
+++ b/Finger-Print-WebApi/Finger-Print-WebApi/Finger-Print-WebApi.csproj
@@ -8,12 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Models\Domain\" />
     <Folder Include="Models\DTO\" />
     <Folder Include="Repos\IRepo\" />
     <Folder Include="Repos\Repo\" />
