--- a/Finger-Print-WebApi/Finger-Print-WebApi/appsettings.json
+++ b/Finger-Print-WebApi/Finger-Print-WebApi/appsettings.json
@@ -9,4 +9,9 @@
   "ConnectionStrings": {
     "FingerPrint": "server=.;database=FingerPrint;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
   }
-}
+  "Jwt": {
+    "Key": "shfgaHAGDJA7788F4258GFUKhdghsdflksdklgsf25655fdsbh",
+    "Issuer": "https://localhost:7099/",
+    "Audience": "https://localhost:7099/"
+  }
+} 
